# ord

./: Cargo.toml  Descriptors.tsv  Nouns.tsv  OrdLocale.json  Particles.tsv  Verbs.tsv  everest.yaml  main.lua  ord.db
Dialog/: Ordish.txt
localization/: od.lua
src/: db.rs  lang.rs  main.rs  parser.rs  tui.rs
src/tui/: dropdown.rs  focus.rs  left_label.rs  line_input.rs  scrollagraph.rs  traits.rs  word_choice.rs  word_edit.rs  word_update.rs
