[package]
name = "analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
ciborium = "0.2.2"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.4"
either = "1.15.0"
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
regex = "1.11.1"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tui-scrollview = "0.5.1"
tui-textarea = "0.7.0"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
